--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,7 +1,7 @@
-body,
-html,
-p,
-h2 {
+body, html,
+p, h2, 
+figure, content, 
+section, form {
   margin: 0;
   padding: 0;
 }
@@ -27,9 +27,11 @@ ul {
   align-items: center;
   font-size: 14px;
 }
+
 .header-title {
   padding: 12px 50px;
 }
+
 .category-nav {
   display: flex;
   justify-content: space-between;
@@ -37,28 +39,33 @@ ul {
 
 .main {
   display: flex;
-  justify-content: space-between;
-  margin: 20px 30px 30px 30px;
+  margin: 20px 20px 10px 30px;
 }
+
 .left-section {
-  width: 14%;
+  width: 15%;
 }
+
 .about {
   background-color: #f8f9fa;
-  padding-left: 15px;
+  padding: 0 10px 0 15px;
 }
+
 .about-title {
   padding: 30px 0 10px;
   font-style: italic;
 }
+
 .about-content {
   font-size: 16px;
   font-weight: 600;
   padding: 0 10px 35px 0px;
 }
+
 .achives {
   margin-left: 20px;
 }
+
 .achives-content {
   font-size: 16px;
   color: #855eab;
@@ -66,41 +73,97 @@ ul {
   text-decoration: underline;
 }
 
+.main-content {
+  margin: 0px 20px;
+  display: flex;
+}
+
 .content-section {
-  margin: 0px 25px;
+  width: 50%;
 }
+
 .content-artical {
+  margin: 0px 20px 15px 0;
 }
+
+.content-artical2 {
+  margin: 0px 0px 15px 0;
+}
+
 .about-thumbnail {
   border: 1px solid #ededed;
-  /* box-shadow: 2px 3px 50px #EDEDED; */
-  width: 42%;
 }
+
 .thumbnail-img {
   width: 100%;
 }
+
 .thumbnail-info {
   margin: 10px;
 }
+
 .thumbnail-title {
   margin: 10px 0;
 }
+
 .thumbnail-message {
   font-size: 13px;
   margin-bottom: 10px;
 }
+
 .thumbnail-details {
-  color: #6eb1fe;
+  color: #007BFF;
   font-size: 12px;
-  font-weight: bold;
 }
+
 .detail-icon {
   font-size: 10px;
 }
 
 .right-section {
+  display: flex;
+  align-items: center;
 }
-.login-in {
+
+.sign-in {
+  background-color: #f8f9fa;
+  padding: 20px;
+}
+
+.input-message {
+  height: 30px;
+  border: 1px solid lightgray;
+  border-radius: 3px;
+}
+input::-webkit-input-placeholder {
+  text-align: left;
+  padding-left: 5px; 
+}
+
+.checkbox-line {
+  display: flex;
+  justify-content: center;
+  margin-top: 5px;
+}
+
+.checkbox {
+  width: 10px;
+  margin-right: 5px;
+}
+
+.checkboc-message { 
+  font-size: 10px;
+}
+
+.submit {
+  background-color: #007BFF;
+  width: 100%;
+  height: 31px;
+  border: none;
+  color: white;
+  font-weight: bolder;
+  margin-top: 10px;
+  border-radius: 3px;
 }
 
 .footer {
